@@ -73,6 +73,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Include common.css from classic-style skins in main HTML with the bump URL
   FIXME: this may leave doubled rules which won't stand up to certain changes.
   Will want to adjust these more to eliminate the dupe @includes.
+* (bug 7607) Add Karakalpak (kaa) to Names.php and stub message file for linktrail
 
 
 == Languages updated ==
